   -  direct memory access with flat override ( for constant addresses )
      may have generated error "cannot access label through segment registers";
      see flatgrp3.asm.
   -  regression in v2.16: invoke may have generated a "PUSHD" in 64-bit code
      if .model wasn't flat; see invoke54.asm.
   -  FLAT: override may have suppressed address size prefix; see
      flatgrp4.asm;
   -  invoke, 64-bit, non-win64, vararg: 32-bit registers were rejected as
      arguments; see invoke55.asm.
   -  display of assembly-time was correct only if CLOCKS_PER_SEC was 1000.

   Other changes:
   -  option stackbase: may be used in conjunction with "assume ss" to
      define a PROC where CS and SS differ in offset magnitude ( 16-bit
      code with 32-bit stack and vice versa ); see stkbase1.asm, stkbase2.asm.
   -  format -pe: 64-bit segments defined with USE64 are added to internal
      "flat" group if model is flat. Allows to mix 32- and 64-bit segments in
      .model FLAT; see flatgrp5.asm & flatgrp6.asm.
   -  simplified segment directive .code with name argument in tiny model
      always added the segment to dgroup. Now this is done only if segment's
      offset size matches the model's offset size; see tiny2.asm.
   -  RETs inside PROCs will now show up in listing file like in Masm; see
      lst3.asm.
   -  in listings, offset of 16-bit segments now displayed with width 4.

   14.11.2022, v2.16:

   Bugfixes:
   -  format mz: in the binary map of listings, the RVA of segments belonging
      to a group may have been incorrect, since the group's align adjustment 
      was ignored; see grpalign.asm.
   -  symbol $ is internally marked as assembly-time variable - this caused
      fixup problems in OMF format; see fixup6.asm.
   -  invoke directive, 32-bit code, "ADDR": if the address of a symbol
      in a 16-bit segment was to be pushed, just a WORD was pushed ( Masm is
      buggy, pushes a DWORD, then a WORD ); see invoke41.asm.